--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,14 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import './variables';
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 body {
   background-color: $main;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
+  // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  //   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  //   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
