--- a/src/components/pages/Question/Question.scss
+++ b/src/components/pages/Question/Question.scss
@@ -1,3 +1,9 @@
-.Quiz {
+.Question {
   color: whitesmoke;
+}
+
+.answer-holder {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
