--- a/src/components/pages/Recs/Recs.scss
+++ b/src/components/pages/Recs/Recs.scss
@@ -1,5 +1,8 @@
 @import '../../../styles/variables';
 
-.Recs {
+.recs-header {
   color: $whiteout;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
 }
