--- a/src/components/shared/MyNavbar/MyNavbar.scss
+++ b/src/components/shared/MyNavbar/MyNavbar.scss
@@ -1,5 +1,9 @@
 @import '../../../styles/variables';
+@import url('https://fonts.googleapis.com/css?family=PT+Sans&display=swap');
 
 .main-header {
-  color: $main;
+  color: $pop;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 44px;
+  margin: 0px;
 }
