--- a/src/components/pages/Dashboard/Dashboard.scss
+++ b/src/components/pages/Dashboard/Dashboard.scss
@@ -23,3 +23,11 @@
     justify-content: space-around;
   }
 }
+
+.spaceholder {
+  height: 70px;
+}
+
+.mini-selects-header {
+  margin: 0px 0px 20px 0px;
+}
