--- a/src/components/pages/Auth/Auth.scss
+++ b/src/components/pages/Auth/Auth.scss
@@ -1,10 +1,10 @@
 @import '../../../styles/variables';
 @import url('https://fonts.googleapis.com/css?family=PT+Sans&display=swap');
 
-.Auth {
-  background-image: url('https://cdn.unifiedcommerce.com/content/product/large/1058_wine_bottles_1200_rgb.jpg');
-  background-repeat: repeat-x;
-}
+// body {
+//   background-image: url('https://www.kelownanow.com/files/PicMonkey_Collage-1510.jpg');
+//   background-size: cover;
+// }
 
 .auth-main {
   color: $pop;
